Đổi link ảnh thành link firebase

--- a/tour-details/about.html
+++ b/tour-details/about.html
@@ -15,7 +15,7 @@
     <header>
         <div class="logo">
             <a href="./homepage.html">
-                <img src="./assets/image/logo.png" alt="Trang chủ NhaTrangNatureElite" width="220" height="62">
+                <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Flogo.png?alt=media&token=2b706eb6-a8dd-488b-a807-bd03f3c56ad4&_gl=1*3fmrn0*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODA4Mi4wLjAuMA.." alt="Trang chủ NhaTrangNatureElite" width="220" height="62">
             </a>
         </div>
         <nav class="nav-menu">
@@ -60,7 +60,7 @@
             </div>
 
             <div class="about-content-2">
-                <img src="./assets/image/about-background.jpg" alt="Giới thiệu Nha Trang Booking">
+                <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Fabout-background.jpg?alt=media&token=1a31fe0d-6fce-4333-98c1-0d21fc5a95eb&_gl=1*hnde2w*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwNzc5Ni4wLjAuMA.." alt="Giới thiệu Nha Trang Booking">
                 <div class="container">
                     <div class="content-element text-center">
                         <h2 class="title-element">
@@ -153,7 +153,7 @@
                                 <p>Hướng tới cho bạn sự tự tin, năng động, kết nối cộng đồng lành mạnh, trên tinh thần học tập và vui chơi. Và tất cả mọi thứ tôi cần là bạn phải mạnh dạn và đặt tour để trải nghiệm cùng chúng tôi mà không lo về giá.</p>
                             </div>
                             <div class="col-12 col-lg-6">
-                                <img src="./assets/image/business-about.png" alt="Sứ mệnh">
+                                <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Fbusiness-about.png?alt=media&token=32a3afb8-82f5-4f57-8582-abecd126092c&_gl=1*15dlftg*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwNzkxMi4wLjAuMA.." alt="Sứ mệnh">
                             </div>
                         </div>
                     </div>
@@ -165,7 +165,7 @@
                     <div class="content-element">
                         <div class="row">
                             <div class="col-12 col-lg-6">
-                                <img src="./assets/image/business-why.png" alt="Sự khác biệt">
+                                <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Fbusiness-why.png?alt=media&token=1303c567-0073-43f8-904e-e53914c92b43&_gl=1*1p4p68g*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwNzk0MS4wLjAuMA.." alt="Sự khác biệt">
                             </div>
                             <div class="col-12 col-lg-6">
                                 <h2 class="title-element">
@@ -205,7 +205,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3">
                     <div class="logo-footer">
                         <a href="#">
-                            <img src="./assets/image/logo-footer.png" alt="Đây là logo" width="175" height="58">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Flogo-footer.png?alt=media&token=1ea9b4e7-de5f-478b-b6ee-a20d605a265a&_gl=1*1fyyh6r*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODA0NC4wLjAuMA.." alt="Đây là logo" width="175" height="58">
                         </a>
                     </div>
                     <p class="copyright">© 2023 NhaTrangNatureElite</p>
