--- a/tour-details/homepage.html
+++ b/tour-details/homepage.html
@@ -20,7 +20,7 @@
     <header>
         <div class="logo">
             <a href="#">
-                <img src="./assets/image/logo.png" alt="Trang chủ NhaTrangNatureElite" width="220" height="62">
+                <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Flogo.png?alt=media&token=2b706eb6-a8dd-488b-a807-bd03f3c56ad4&_gl=1*3fmrn0*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODA4Mi4wLjAuMA.." alt="Trang chủ NhaTrangNatureElite" width="220" height="62">
             </a>
         </div>
         <!-- <div class="search-bar">
@@ -50,27 +50,27 @@
         <div class="slide-list owl-carousel owl-theme">
             <div class="slide-item">
                 <picture>
-                    <img src="./assets/image/sliders/slide-1.jpg" alt="slide 1">
+                    <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2FSlider%2Fslide-1.jpg?alt=media&token=1d827da9-2595-4ce0-821a-21f1465d379e&_gl=1*1fhc5u8*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODE4MC4wLjAuMA.." alt="slide 1">
                 </picture>
             </div>
             <div class="slide-item">
                 <picture>
-                    <img src="./assets/image/sliders/slide-2.jpg" alt="slide 1">
+                    <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2FSlider%2Fslide-2.jpg?alt=media&token=02e645e6-3e87-4998-9cef-7f648414cae5&_gl=1*1rfz12g*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODIwNC4wLjAuMA.." alt="slide 1">
                 </picture>
             </div>
             <div class="slide-item">
                 <picture>
-                    <img src="./assets/image/sliders/slide-3.jpg" alt="slide 1">
+                    <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2FSlider%2Fslide-3.jpg?alt=media&token=ceb45909-598b-4fc2-9ba1-7e2745eed10d&_gl=1*ojgl82*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODIxOC4wLjAuMA.." alt="slide 1">
                 </picture>
             </div>
             <div class="slide-item">
                 <picture>
-                    <img src="./assets/image/sliders/slide-4.jpg" alt="slide 1">
+                    <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2FSlider%2Fslide-4.jpg?alt=media&token=a8497577-6ef0-4da4-88dc-1cb028090005&_gl=1*1jgii6c*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODI2Ni4wLjAuMA.." alt="slide 1">
                 </picture>
             </div>
             <div class="slide-item">
                 <picture>
-                    <img src="./assets/image/sliders/slide-5.jpg" alt="slide 1">
+                    <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2FSlider%2Fslide-5.jpg?alt=media&token=9154e4d7-1325-4a4d-b161-a55b8e96273f&_gl=1*1gu4xnm*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODI4My4wLjAuMA.." alt="slide 1">
                 </picture>
             </div>
         </div>
@@ -93,7 +93,7 @@
                         <div class="tour-item">
                             <figure class="thumb">
                                 <a class="lazy-container" href="#">
-                                    <img class="lazy" src="./assets/image/img__1.jpg">
+                                    <img class="lazy" src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Fimg__1.jpg?alt=media&token=fb62ad3c-4818-4ebc-813d-3fabd2b0215d&_gl=1*1hvsut0*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODMxOC4wLjAuMA..">
                                 </a>
                                 <span class="sale">hot</span>
                             </figure>
@@ -122,7 +122,7 @@
                         <div class="tour-item">
                             <figure class="thumb">
                                 <a class="lazy-container" href="#">
-                                    <img class="lazy" src="./assets/image/img__2.jpg" data-src="./assets/image/img__2.jpg">
+                                    <img class="lazy" src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Fimg__2.jpg?alt=media&token=0f76f5cf-29b4-4ba3-b9b3-0ad3d8d3f3e5&_gl=1*qz2931*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODM1NS4wLjAuMA..">
                                 </a>
                                 <span class="sale">hot</span>
                             </figure>
@@ -151,7 +151,7 @@
                         <div class="tour-item">
                             <figure class="thumb">
                                 <a class="lazy-container" href="#">
-                                    <img class="lazy" src="./assets/image/img1.jpg">
+                                    <img class="lazy" src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Fimg1.jpg?alt=media&token=91cd87ed-b271-4855-a792-c3c2edb4b351&_gl=1*rqy114*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODQyNi4wLjAuMA..">
                                 </a>
                                 <span class="sale">hot</span>
                             </figure>
@@ -180,7 +180,7 @@
                         <div class="tour-item">
                             <figure class="thumb">
                                 <a class="lazy-container" href="#">
-                                    <img class="lazy" src="./assets/image/img-4.jpg">
+                                    <img class="lazy" src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Fimg-4.jpg?alt=media&token=1b456ca0-5c55-480e-96d2-9b00c9721dc9&_gl=1*4ak0ss*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODQ0OS4wLjAuMA..">
                                 </a>
                                 <span class="sale">hot</span>
                             </figure>
@@ -299,7 +299,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3">
                     <div class="logo-footer">
                         <a href="#">
-                            <img src="./assets/image/logo-footer.png" alt="Đây là logo" width="175" height="58">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Flogo-footer.png?alt=media&token=1ea9b4e7-de5f-478b-b6ee-a20d605a265a&_gl=1*1fyyh6r*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODA0NC4wLjAuMA.." alt="Đây là logo" width="175" height="58">
                         </a>
                     </div>
                     <p class="copyright">© 2023 NhaTrangNatureElite</p>
