--- a/tour-details/tour-list-page2.html
+++ b/tour-details/tour-list-page2.html
@@ -14,7 +14,7 @@
     <header>
         <div class="logo">
             <a href="./homepage.html">
-                <img src="./assets/image/logo.png" alt="Trang chủ NhaTrangNatureElite" width="220" height="62">
+                <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Flogo.png?alt=media&token=2b706eb6-a8dd-488b-a807-bd03f3c56ad4&_gl=1*165tam*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODY1OS4wLjAuMA.." alt="Trang chủ NhaTrangNatureElite" width="220" height="62">
             </a>
         </div>
         <nav class="nav-menu">
@@ -59,7 +59,7 @@
                         <div class="tour-item">
                             <figure class="thumb">
                                 <a href="#" class="lazy-container">
-                                    <img class="lazy" src="./assets/image/tour-list/tour7.jpg">
+                                    <img class="lazy" src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2FTour%20list%2Ftour7.jpg?alt=media&token=9b1fef4a-fa94-41b5-bf77-73de31440cd6&_gl=1*1rlte14*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwOTA0OC4wLjAuMA..">
                                 </a>
                                 <span class="sale">hot</span>
                             </figure>
@@ -85,7 +85,7 @@
                         <div class="tour-item">
                             <figure class="thumb">
                                 <a href="#" class="lazy-container">
-                                    <img class="lazy" src="./assets/image/tour-list/tour8.jpg">
+                                    <img class="lazy" src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2FTour%20list%2Ftour8.jpg?alt=media&token=fcd2565a-3aa9-4e5b-9808-54de4d11332d&_gl=1*1mto5pw*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwOTA2Ny4wLjAuMA..">
                                 </a>
                                 <span class="sale">hot</span>
                             </figure>
@@ -111,7 +111,7 @@
                         <div class="tour-item">
                             <figure class="thumb">
                                 <a href="#" class="lazy-container">
-                                    <img class="lazy" src="./assets/image/tour-list/tour9.jpg">
+                                    <img class="lazy" src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2FTour%20list%2Ftour9.jpg?alt=media&token=0d732622-9c3e-437a-88fc-9da066c5d44d&_gl=1*142ypo*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwOTA4Ny4wLjAuMA..">
                                 </a>
                                 <span class="sale">hot</span>
                             </figure>
@@ -137,7 +137,7 @@
                         <div class="tour-item">
                             <figure class="thumb">
                                 <a href="#" class="lazy-container">
-                                    <img class="lazy" src="./assets/image/tour-list/tour10.jpg">
+                                    <img class="lazy" src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2FTour%20list%2Ftour10.jpg?alt=media&token=b0d7db9f-a069-40ab-b07d-f702a4d3bfa9&_gl=1*1npc4be*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwOTEwNC4wLjAuMA..">
                                 </a>
                                 <span class="sale">hot</span>
                             </figure>
@@ -182,7 +182,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3">
                     <div class="logo-footer">
                         <a href="#">
-                            <img src="./assets/image/logo-footer.png" alt="Đây là logo" width="175" height="58">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Flogo-footer.png?alt=media&token=1ea9b4e7-de5f-478b-b6ee-a20d605a265a&_gl=1*1fyyh6r*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODA0NC4wLjAuMA.." alt="Đây là logo" width="175" height="58">
                         </a>
                     </div>
                     <p class="copyright">© 2023 NhaTrangNatureElite</p>
