--- a/tour-details/tour-list.html
+++ b/tour-details/tour-list.html
@@ -14,7 +14,7 @@
     <header>
         <div class="logo">
             <a href="./homepage.html">
-                <img src="./assets/image/logo.png" alt="Trang chủ NhaTrangNatureElite" width="220" height="62">
+                <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Flogo.png?alt=media&token=2b706eb6-a8dd-488b-a807-bd03f3c56ad4&_gl=1*165tam*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODY1OS4wLjAuMA.." alt="Trang chủ NhaTrangNatureElite" width="220" height="62">
             </a>
         </div>
         <nav class="nav-menu">
@@ -61,7 +61,7 @@
                         <div class="tour-item">
                             <figure class="thumb">
                                 <a href="#" class="lazy-container">
-                                    <img class="lazy" src="./assets/image/tour-list/tour1.jpg">
+                                    <img class="lazy" src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2FTour%20list%2Ftour1.jpg?alt=media&token=0d2561fd-d2fb-4b37-9ea7-77aa2fec3ea6&_gl=1*o5u4ai*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODc4Ny4wLjAuMA..">
                                 </a>
                                 <span class="sale">hot</span>
                             </figure>
@@ -87,7 +87,7 @@
                         <div class="tour-item">
                             <figure class="thumb">
                                 <a href="#" class="lazy-container">
-                                    <img class="lazy" src="./assets/image/tour-list/tour2.jpg">
+                                    <img class="lazy" src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2FTour%20list%2Ftour2.jpg?alt=media&token=a43242ce-3144-4d90-a132-4e814aed891a&_gl=1*8ccf41*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODgxMy4wLjAuMA..">
                                 </a>
                                 <span class="sale">hot</span>
                             </figure>
@@ -113,7 +113,7 @@
                         <div class="tour-item">
                             <figure class="thumb">
                                 <a href="#" class="lazy-container">
-                                    <img class="lazy" src="./assets/image/tour-list/tour3.jpg">
+                                    <img class="lazy" src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2FTour%20list%2Ftour3.jpg?alt=media&token=9a180760-f281-4a5c-9b6d-b28914ed00d4&_gl=1*1e3a5hu*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODgzMC4wLjAuMA..">
                                 </a>
                                 <span class="sale">hot</span>
                             </figure>
@@ -139,7 +139,7 @@
                         <div class="tour-item">
                             <figure class="thumb">
                                 <a href="#" class="lazy-container">
-                                    <img class="lazy" src="./assets/image/tour-list/tour4.jpg">
+                                    <img class="lazy" src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2FTour%20list%2Ftour4.jpg?alt=media&token=4458f3f5-20d5-4691-9149-f11ef5883f59&_gl=1*1j92se3*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODg0Ni4wLjAuMA..">
                                 </a>
                                 <span class="sale">hot</span>
                             </figure>
@@ -165,7 +165,7 @@
                         <div class="tour-item">
                             <figure class="thumb">
                                 <a href="#" class="lazy-container">
-                                    <img class="lazy" src="./assets/image/tour-list/tour5.jpg">
+                                    <img class="lazy" src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2FTour%20list%2Ftour5.jpg?alt=media&token=36f0bd0d-5c11-46f1-8139-4b175a676272&_gl=1*v3cvdg*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODg4MC4wLjAuMA..">
                                 </a>
                                 <span class="sale">hot</span>
                             </figure>
@@ -191,7 +191,7 @@
                         <div class="tour-item">
                             <figure class="thumb">
                                 <a href="#" class="lazy-container">
-                                    <img class="lazy" src="./assets/image/tour-list/tour6.jpg">
+                                    <img class="lazy" src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2FTour%20list%2Ftour6.jpg?alt=media&token=315c71e2-b31d-4de6-a9f1-635ff0d032e8&_gl=1*1dxln67*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODkyNi4wLjAuMA..">
                                 </a>
                                 <span class="sale">hot</span>
                             </figure>
@@ -233,7 +233,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3">
                     <div class="logo-footer">
                         <a href="#">
-                            <img src="./assets/image/logo-footer.png" alt="Đây là logo" width="175" height="58">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Flogo-footer.png?alt=media&token=1ea9b4e7-de5f-478b-b6ee-a20d605a265a&_gl=1*1fyyh6r*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODA0NC4wLjAuMA.." alt="Đây là logo" width="175" height="58">
                         </a>
                     </div>
                     <p class="copyright">© 2023 NhaTrangNatureElite</p>
