Front-end: Add (Contact Page) & Update (Booking / History Page)

--- a/booking.html
+++ b/booking.html
@@ -293,7 +293,7 @@
                     >
                     <p>
                       <i class="fas fa-info-circle pink-color"></i>
-                      <a target="_blank" href="/huong-dan-thanh-toan"
+                      <a target="_blank" href="#" class="paymentMethod"
                         >Thanh toán bằng chuyển khoản ngân hàng tại đây</a
                       >
                     </p>
