Update detail box booking tour + package tour ( JS + CSS + update HTML)

--- a/detail.html
+++ b/detail.html
@@ -197,6 +197,40 @@
             </li>
           </ul>
 
+          <!-- Start Box Booking  -->
+          <div class="booking-tour">
+            <div class="container">
+              <h1>Các gói <b class="title">Tour</b></h1>
+              <p>
+                Vui lòng chọn một trong các gói giá (nhấp vào
+                <strong>“Chọn”</strong> để xem đầy đủ gói).
+              </p>
+              <div class="tourpackage-body">
+                <div class="tourpackage-body-detail">
+                  <h3 class="tourpackage-body-detail-title">VINPEARL NHA TRANG [ Gói cơ bản ] 750.000 VNĐ</h3>
+                  <form action="#">
+                    <!-- form handle button book tourpackages -->
+                    <button class="btn-booking-tour"">
+                      <i class="fa-solid fa-o"></i> CHỌN
+                    </button>
+                  </form>
+                </div>
+              </div>
+              <div class="tourpackage-body">
+                <div class="tourpackage-body-detail">
+                  <h3 class="tourpackage-body-detail-title">VINPEARL NHA TRANG [ Gói VIP ] 850.000 VNĐ</h3>
+                  <form action="#">
+                    <!-- form handle button book tourpackages -->
+                    <button class="btn-booking-tour">
+                      <i class="fa-solid fa-o"></i> CHỌN
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--End Box Booking-->
+
           <!-- START MAP BOX -->
           <div class="map-tour">
             <div class="map-header">
@@ -212,8 +246,9 @@
           </div>
           <!-- END MAP BOX -->
         </div>
+
         <!-- Start Booking Tour -->
-        <div class="box-hotline">
+        <!-- <div class="box-hotline">
           <div class="box-content">
             Giá: <span class="price-origin">800.000đ</span>
             <h1 class="price-discount">700.000đ /người lớn</h1>
@@ -227,12 +262,12 @@
             <button class="contact_btn">Liên hệ tư vấn</button>
             <button class="book_btn">Đặt Tour</button>
           </div>
-        </div>
+        </div> -->
         <!-- End Booking Tour -->
       </div>
-
       <!-- Start Feedback Box -->
       <div class="box-feedback">
+        `
         <h3 class="feedback-title">
           2 Khách trên Nha Trang Nature Elite chia sẻ về trải nghiệm của mình:
         </h3>
@@ -286,5 +321,6 @@
       </div>
       <!-- End Feedback Box -->
     </div>
+    <script src="./assets/js/detailTourJS/detailTour.js"></script>
   </body>
 </html>
