--- a/change-pass.html
+++ b/change-pass.html
@@ -21,7 +21,7 @@
                         <div class="info">
                             <div class="info-image">
                                 <a href="#">
-                                    <img src="assets/image/MyImg.jpg" />
+                                    <img src="#" />
                                 </a>
                             </div>
                             <div class="info_details">
