--- a/profile-user.html
+++ b/profile-user.html
@@ -20,7 +20,7 @@
                         <div class="info">
                             <div class="info-image">
                                 <a href="#">
-                                    <img src="assets/image/MyImg.jpg" />
+                                    <img src="#" />
                                 </a>
                             </div>
                             <div class="info_details">
