Upload homepage mới

--- a/tour-details/homepage.html
+++ b/tour-details/homepage.html
@@ -75,11 +75,27 @@
             </div>
         </div>
         <div class="slide-text">
-            <span class="mouse-icon"></span>
             <h1 class="slide-h1" >Nha trang Nature Elite</h1>
             <p class="slide-p" >Explore, Experience, and Embrace: Your Perfect One Day Adventure!</p>
         </div>
     </div>
+
+    <!-- <div id="slider"> 
+        <div class="container">
+            <div class="owl-carousel owl-theme" id="banner-slider">
+                <div class="item">
+                    <a href=""><img src="./assets/image/slider1.png"></a>
+                </div>
+                <div class="item">
+                    <a href=""><img src="./assets/image/slider2.png"></a>
+                </div>
+                <div class="item">
+                    <a href=""><img src="./assets/image/slider2.png"></a>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
     <section class="main">
         <div class="top-tour">
             <div class="container">
@@ -113,9 +129,9 @@
                                         600,000 VND <span>/người lớn</span>
                                     </p>
                                 </div>
-                                <div class="other">
-                                    <p class="timer">Khởi hành hằng ngày</p>
-                                </div>
+                                <!-- <div class="other">
+                                    <a class="btn btn-default" href="./about.html">Tìm hiểu thêm</a>
+                                </div> -->
                             </div>
                         </div>
 
