Co-authored-by: KrissTiNa207 <TriSBie@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="content__slider">
                     <div class="owl-carousel" id="content-slider">
                         <div class="item content__slider-item">
-                            <a href=""><img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Fimg7.jpg?alt=media&token=997d98c7-050d-44d5-b005-f61f65f1160b&_gl=1*25jfjz*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NjEwNDczMi44LjEuMTY4NjEwNzE1OS4wLjAuMA.." alt="" class="content__slider-img">
+                            <a href="./detail.html"><img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Fimg7.jpg?alt=media&token=997d98c7-050d-44d5-b005-f61f65f1160b&_gl=1*25jfjz*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NjEwNDczMi44LjEuMTY4NjEwNzE1OS4wLjAuMA.." alt="" class="content__slider-img">
                                 <div class="content__slider-name">
                                     <h3 class="content__slider-heading">Vinpearl Land</h3>
                                     <p class="content__slider-description">Đã có <strong>X</strong> lượt khách</p>
