Upload tất cả các trang mới

--- a/homepage_new.html
+++ b/homepage_new.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/imgs/five-icon.png" type="image/x-icon" sizes="30x30">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
-    <link rel="stylesheet" href="assets/css/bootstrap_1.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap_1.css">
     <!-- Css Slider -->
-    <link rel="stylesheet" href="./assets/css/slider/owl.carousel.min.css">
-    <link rel="stylesheet" href="./assets/css/slider/owl.theme.default.min.css">
+    <link rel="stylesheet" href="./assets/css/HomePageCSS/slider/owl.carousel.min.css">
+    <link rel="stylesheet" href="./assets/css/HomePageCSS/slider/owl.theme.default.min.css">
     <!-- Css Slider -->
-    <link rel="stylesheet" href="./assets/css/homepage_new.css">
+    <link rel="stylesheet" href="./assets/css/header_footer.css">
+    <link rel="stylesheet" href="./assets/css/HomePageCSS/homepage_new.css">
     <!-- <link rel="stylesheet" href="./assets/css/responsive.css"> -->
     <title>Nha Trang Nature Elite_new  </title>
 </head>
@@ -51,7 +52,7 @@
                         <ul class="search__suggest-list">
                             <li class="search__suggest-item">
                                 <div class="search__suggest-thumbnail">
-                                    <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2FTour%20list%2Ftour1.jpg?alt=media&token=0d2561fd-d2fb-4b37-9ea7-77aa2fec3ea6&_gl=1*m2nlv3*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NjEwNDczMi44LjEuMTY4NjEwNDc2Mi4wLjAuMA.." alt="" class="search__suggest-thumbnail-img">
+                                    <img src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Fimg1.jpg?alt=media&token=91cd87ed-b271-4855-a792-c3c2edb4b351&_gl=1*1m0qjf4*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NjU1NzAwOS4xOC4xLjE2ODY1NTcwMzYuMC4wLjA." alt="" class="search__suggest-thumbnail-img">
                                 </div>
                                 <div class="search__suggest-content">
                                     <p class="search__suggest-title">Vinpearl Land</p>
@@ -565,10 +566,10 @@
 <!-- End: Footer -->
 
 <!--JS Slider -->
-<script src="./js/slider/jquery.min.js"></script>
-<script src="./js/slider/owl.carousel.js"></script>
-<script src="./js/slider/slider.js"></script>
+<script src="./assets/js/slider/jquery.min.js"></script>
+<script src="./assets/js/slider/owl.carousel.js"></script>
+<script src="./assets/js/slider/slider.js"></script>
 <!-- JS -->
-<script src="./js/main.js"></script>
+<script src="./assets/js/main.js"></script>
 </body>
 </html>
