--- a/tour-details.html
+++ b/tour-details.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+    <!-- <link rel="stylesheet" href="./assets/css/bootstrap_1.css">
+    <link rel="stylesheet" href="./assets/css/header_footer.css"> -->
+    <link rel="stylesheet" href="./assets/css/TourDetailCSS/style.css">
+    
     <!-- Font  -->
     <link
       rel="stylesheet"
