--- a/tourlist_new.html
+++ b/tourlist_new.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/imgs/five-icon.png" type="image/x-icon" sizes="30x30">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
-    <link rel="stylesheet" href="./assets/css/HomePageCSS/bootstrap1.css">
-    <link rel="stylesheet" href="./assets/css/HomePageCSS/header_footer.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap_1.css">
+    <link rel="stylesheet" href="./assets/css/header_footer.css">
     <link rel="stylesheet" href="./assets/css/TourListCSS/style.css">
     <link rel="stylesheet" href="./assets/css/TourListCSS/plugins.css">
     <title>Tour One-day Nha Trang</title>
@@ -107,14 +107,22 @@
 		<div class="page-title image-title" style="background-image:url(https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Fbg-cate.jpg?alt=media&token=ac753111-cf28-4ec6-beae-da92b0b6c05d&_gl=1*1x16595*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NjQwNTU2My4xNi4xLjE2ODY0MDU1NzIuMC4wLjA.);">
 			<div class="container">
 				<div class="page-title-wrap">
-				<h2>Tour One-day</h2>
-				<p><a href="#" class="theme-cl">Home</a> | <span>Tour List</span></p>
+				<h2>TOUR DU LỊCH NHA TRANG 1 NGÀY</h2>
+				<!-- <p><a href="#" class="theme-cl">Home</a> | <span>Tour List</span></p> -->
 				</div>
 			</div>
 		</div>
 		<!-- ======================= End Page Title ===================== -->
         <section class="gray-bg">
             <div class="container">
+				<nav aria-label="breadcrumb">
+					<ol class="breadcrumb">
+						<li class="breadcrumb-item">
+							<a href="./homepage_new.html">Trang chủ</a>
+						</li>
+						<li class="breadcrumb-item active" aria-current="page">Tour 1 ngày</li>
+					</ol>
+				</nav>
                 <div class="row">
                     <div class="col-md-4 col-sm-12">
                         <div class="tr-single-box">
@@ -247,8 +255,8 @@
 											Sort By
 										</button>
 										<div class="dropdown-menu pull-right animated flipInX">
-											<a href="#">Accending</a>
-											<a href="#">Decending</a>
+											<a href="#">Ascending</a>
+											<a href="#">Descending</a>
 											<a href="#">By Price</a>
 										</div>
 									</div>
@@ -770,7 +778,7 @@
 <script src="./assets/js/jquery.min.js"></script>
 <script src="./assets/js/bootstrap.min.js"></script>
 <script src="./assets/js/main.js"></script>
-<script></script>
+<script src="./assets/js/slider/slider.js"></script>
 <script></script>
 <script></script>
 <!-- JS -->
